security: execute fixtures through explicit sandbox profiles